# polytech

./: CMakeLists.txt
loader-db-PyQt/: README.md  SqlConnect.py  main.py
loader-db-PyQt/exemples/: example_QSqlTableModel.py  filter_table_awesome_example.py  interesting_table.py  litl_big.py  simple_db.py  simple_input.py
opengl_example/: README.md  requirements.txt
opengl_example/examples/: ann2.cpp  tannenbaum.py  test.py  testttt.py  textured_cube.py
opengl_example/src/: base_settings.py  material_and_textures.py  tetrahedron_and_sphere.py  torus_and_cube.py
polytech_java/: tasks.md
polytech_java/src/task1/: Main.java
polytech_java_2/: Dockerfile_Postgres  README.md  build.gradle  settings.gradle
python_shared_lib/: CMakeLists.txt  Makefile  clib1.c  main.py
semester_1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
semester_1/ex6/: console.cpp  console.h
semester_1/ex7/: list_example.cpp  main.cpp  slice_example.cpp
semester_1/ex8/: ex8.cpp  example_8.cpp  main.cpp
semester_2/: CMakeLists.txt  input.txt  lab1.cpp  lab2.cpp
semester_2/lab3_1/: main.cpp  queue.cpp  queue.h
semester_2/lab3_2/: main.cpp
semester_2/lab4/: MyContainer.cpp  MyContainer.h  main.cpp
semester_2/lab5/: main.cpp
semester_2/lab6_1/: input.txt  main.cpp
semester_2/lab6_2/: main.cpp  shapes.cpp  shapes.h
semester_2/lab7/: main.cpp
semester_2/lab8_1/: main.cpp
semester_2/lab8_2/: main.cpp  shape.cpp  shape.h
systemc_i2c/: Makefile  i2c_controller.cpp  i2c_controller.h  i2c_controller_tb.cpp  i2c_controller_tb.h  main.cpp  waveforms.vcd
(+26 files in other folders)
