cmake_minimum_required(VERSION 3.12)
project(polytech_cpp)

set(CMAKE_CXX_STANDARD 14)

#add_executable(polytech_cpp semester_1/ex1.cpp)
#add_executable(polytech_cpp semester_1/ex2.cpp)
#add_executable(polytech_cpp semester_1/ex3.cpp)
#add_executable(polytech_cpp semester_1/ex4.cpp)
add_executable(polytech_cpp semester_1/ex5.cpp)
