cmake_minimum_required(VERSION 3.12)
project(oop_cpp2)

set(CMAKE_CXX_STANDARD 14)

#add_executable(oop_cpp2 lab1.cpp)
#add_executable(oop_cpp2 lab2.cpp)

#add_executable(oop_cpp2 lab3_1/queue.cpp lab3_1/queue.h lab3_1/main.cpp)
#add_executable(oop_cpp2 lab3_2/main.cpp)

#add_executable(oop_cpp2 lab4/MyContainer.cpp lab4/MyContainer.h lab4/main.cpp)
#add_executable(oop_cpp2 lab5/main.cpp )
#add_executable(oop_cpp2 lab6_1/main.cpp )
#add_executable(oop_cpp2 lab6_2/main.cpp lab6_2/shapes.cpp lab6_2/shapes.h)
#add_executable(oop_cpp2 lab7/main.cpp )
#add_executable(oop_cpp2 lab8_1/main.cpp)
add_executable(oop_cpp2 lab8_2/main.cpp lab8_2/shape.cpp lab8_2/shape.h)





